--- a/index.html
+++ b/index.html
@@ -8,6 +8,22 @@
         <title>Fruta & Fruto</title>
         <link href="./assets/css/normalize.css" rel="stylesheet" />
         <link href="./assets/css/reset.css" rel="stylesheet" />
+        <link rel="stylesheet" href="./assets/css/cabecalho.css">
+        <link rel="stylesheet" href="./assets/css/menu/menu-lista.css">
+        <link rel="stylesheet" href="./assets/css/menu/menu-item.css">
+        <link rel="stylesheet" href="./assets/css/menu/menu-link.css">
     </head>
-    <body></body>
+    <body>
+        <header class="cabecalho">
+            <img class="logo" alt="Fruta e Fruto" src="./assets/img/logo.jpg"/>
+            <nav class="menu">
+                <ul class="menu__lista">
+                    <li class="menu__item"><a class="menu__link ativo" href="#">Início</a></li>
+                    <li class="menu__item"><a class="menu__link" href="#">Receitas</a></li>
+                    <li class="menu__item"><a class="menu__link" href="#">Quem somos</a></li>
+                    <li class="menu__item"><a class="menu__link" href="#">Comunidade</a></li>
+                </ul>
+            </nav>
+        </header>
+    </body>
 </html>
