--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
         <link rel="stylesheet" href="./assets/css/menu/menu-lista.css">
         <link rel="stylesheet" href="./assets/css/menu/menu-item.css">
         <link rel="stylesheet" href="./assets/css/menu/menu-link.css">
+        <link rel="stylesheet" href="./assets/css/banner/banner.css">
+        <link rel="stylesheet" href="./assets/css/banner/banner-imagem.css">
+        <link rel="stylesheet" href="./assets/css/banner/banner-titulo.css">
+        <link rel="stylesheet" href="./assets/css/sobre/sobre.css">
+        <link rel="stylesheet" href="./assets/css/sobre/sobre-descricao.css">
+        <link rel="stylesheet" href="./assets/css/sobre/sobre-titulo.css">
     </head>
     <body>
         <header class="cabecalho">
@@ -25,5 +31,13 @@
                 </ul>
             </nav>
         </header>
+        <section class="banner">
+            <img class="banner__imagem" src="./assets/img/banner.jpg" alt="Imagem de banner">
+            <h2 class="banner__titulo">Reaproveite melhor os alimentos!</h2>
+        </section>
+        <section class="sobre">
+            <h2 class="sobre__titulo">Receitas para economizar e ganhar saúde</h2>
+            <p class="sobre__descricao">Nossas receitas ajudam você a aproveitar melhor os alimentos, economizar, ganhar tempo e praticidade</p>
+        </section>
     </body>
 </html>
