--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <link rel="stylesheet" href="./assets/css/menu/menu-lista.css">
         <link rel="stylesheet" href="./assets/css/menu/menu-item.css">
         <link rel="stylesheet" href="./assets/css/menu/menu-link.css">
+        <link rel="stylesheet" href="./assets/css/logo.css">
     </head>
     <body>
         <header class="cabecalho">
