--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
             <nav class="menu">
                 <ul class="menu__lista">
                     <li class="menu__item"><a class="menu__link ativo" href="#">Início</a></li>
-                    <li class="menu__item"><a class="menu__link" href="#">Receitas</a></li>
-                    <li class="menu__item"><a class="menu__link" href="#">Quem somos</a></li>
-                    <li class="menu__item"><a class="menu__link" href="#">Comunidade</a></li>
+                    <li class="menu__item"><a class="menu__link" href="#receitas">Receitas</a></li>
+                    <li class="menu__item"><a class="menu__link" href="#quem-somos">Quem somos</a></li>
+                    <li class="menu__item"><a class="menu__link" href="#pessoas">Comunidade</a></li>
                 </ul>
             </nav>
         </header>
@@ -56,7 +56,7 @@
             <h2 class="sobre__titulo">Receitas para economizar e ganhar saúde</h2>
             <p class="sobre__descricao">Nossas receitas ajudam você a aproveitar melhor os alimentos, economizar, ganhar tempo e praticidade</p>
         </section>
-        <section class="receitas">
+        <section class="receitas" id="receitas">
             <div class="receita">
                 <img alt="Tigela de abacate" class="receita__imagem" src="./assets/img/receitas/tigela-de-abacate.jpg" />
                 <div class="receita__conteudo">
@@ -106,10 +106,10 @@
                 </div>
             </div>
         </section>
-        <section class="quem-somos">
+        <section class="quem-somos" id="quem-somos">
             <h3 class="quem-somos__titulo">Quem somos</h3>
             <p class="quem-somos__descricao">Conheça a comunidade por trás da iniciativa</p>
-            <div class="pessoas">
+            <div class="pessoas" id="pessoas">
                 <div class="pessoa">
                     <div class="pessoa__imagem pessoa__imagem--roberta"></div>
                     <span class="pessoa__nome">Roberta</span>
